Updated the comments.

--- a/notebooks/assistant-10-retrieval_HR_assistant.ipynb
+++ b/notebooks/assistant-10-retrieval_HR_assistant.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,9 +34,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Added file:  assistant-qgRqLR622U1TP2WZsRFvDPxg 4\n",
+      "Added file:  assistant-oXCxCoXEbn0ja8FjLnXaD9R1 5\n",
+      "Added file:  assistant-n5HmS8oknuGEDtb1q2b3JK2B 6\n"
+     ]
+    }
+   ],
    "source": [
     "## Files\n",
     "file_benefits = helper.upload_file(client,\"../data/HR/contoso-benefits.txt\")\n",
@@ -53,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,9 +102,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Added assistant:  asst_ueQ8Dm9CKiMz50BMQNBR875g 2\n"
+     ]
+    }
+   ],
    "source": [
     "helper.clear_shelves()\n",
     "\n",
@@ -115,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,9 +177,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating new thread for Alex with user_id 123\n",
+      "Added thread:  thread_DwXVkwWcHCMI6tXA0YuHVERL 1\n",
+      "Generated message: Here are some of the company benefits available to you:\n",
+      "\n",
+      "- **Health Insurance**: The company covers 100% of the premiums for medical, dental, and vision plans for employees and their dependents, including flexible spending accounts, health savings accounts, and wellness programs.\n",
+      "- **Retirement Savings**: Employees receive a 50% match on their 401(k) contributions, up to 6% of their salary. There are also financial education and planning services available.\n",
+      "- **Paid Time Off**: There are generous policies for vacation, sick leave, holidays, parental leave, and sabbatical leave.\n",
+      "- **Professional Development**: Opportunities for learning new skills, advancing careers, and pursuing passions are provided, including tuition reimbursement, online courses, mentoring programs, and internal mobility.\n",
+      "- **Work-Life Balance**: The company supports flexible work arrangements, remote work options, and employee assistance programs. A culture of recognition and appreciation celebrates employees' achievements and contributions【13†source】.\n",
+      "\n",
+      "For requesting medical leave, here is a summary of the process:\n",
+      "- **Notify HR and Supervisor**: Inform your supervisor and HR as soon as possible about your need for leave and the expected duration.\n",
+      "- **Documentation**: Provide appropriate documentation to support your request, such as a doctor's note.\n",
+      "- **Submit Required Forms**: Complete and submit the required forms to HR before the start of your leave.\n",
+      "- **Communication**: Maintain contact with your supervisor and HR during your leave and notify them of any changes in your situation or return date.\n",
+      "- **Return to Work**: Resume your duties on the agreed return date.\n",
+      "\n",
+      "You are entitled to benefits and protections such as:\n",
+      "- **Health Insurance**: Continuation of coverage during leave.\n",
+      "- **Position Restoration**: Restoration of your original or equivalent position upon return (unless the position was eliminated for business reasons or you are unable to perform duties).\n",
+      "- **Protection**: From discrimination, harassment, retaliation, or interference for taking leave.\n",
+      "\n",
+      "You are expected to comply with:\n",
+      "- **Leave Purpose**: Use the leave for the intended reason and avoid any inconsistent activities.\n",
+      "- **Company Policies**: Follow the policies regarding attendance, performance, conduct, and communication.\n",
+      "- **Cooperation**: Provide information or verification requested by the company regarding leave status or eligibility.\n",
+      "- **Company Property**: Return any company property before or during the leave【19†source】.\n",
+      "To Alex: Here are some of the company benefits available to you:\n",
+      "\n",
+      "- **Health Insurance**: The company covers 100% of the premiums for medical, dental, and vision plans for employees and their dependents, including flexible spending accounts, health savings accounts, and wellness programs.\n",
+      "- **Retirement Savings**: Employees receive a 50% match on their 401(k) contributions, up to 6% of their salary. There are also financial education and planning services available.\n",
+      "- **Paid Time Off**: There are generous policies for vacation, sick leave, holidays, parental leave, and sabbatical leave.\n",
+      "- **Professional Development**: Opportunities for learning new skills, advancing careers, and pursuing passions are provided, including tuition reimbursement, online courses, mentoring programs, and internal mobility.\n",
+      "- **Work-Life Balance**: The company supports flexible work arrangements, remote work options, and employee assistance programs. A culture of recognition and appreciation celebrates employees' achievements and contributions【13†source】.\n",
+      "\n",
+      "For requesting medical leave, here is a summary of the process:\n",
+      "- **Notify HR and Supervisor**: Inform your supervisor and HR as soon as possible about your need for leave and the expected duration.\n",
+      "- **Documentation**: Provide appropriate documentation to support your request, such as a doctor's note.\n",
+      "- **Submit Required Forms**: Complete and submit the required forms to HR before the start of your leave.\n",
+      "- **Communication**: Maintain contact with your supervisor and HR during your leave and notify them of any changes in your situation or return date.\n",
+      "- **Return to Work**: Resume your duties on the agreed return date.\n",
+      "\n",
+      "You are entitled to benefits and protections such as:\n",
+      "- **Health Insurance**: Continuation of coverage during leave.\n",
+      "- **Position Restoration**: Restoration of your original or equivalent position upon return (unless the position was eliminated for business reasons or you are unable to perform duties).\n",
+      "- **Protection**: From discrimination, harassment, retaliation, or interference for taking leave.\n",
+      "\n",
+      "You are expected to comply with:\n",
+      "- **Leave Purpose**: Use the leave for the intended reason and avoid any inconsistent activities.\n",
+      "- **Company Policies**: Follow the policies regarding attendance, performance, conduct, and communication.\n",
+      "- **Cooperation**: Provide information or verification requested by the company regarding leave status or eligibility.\n",
+      "- **Company Property**: Return any company property before or during the leave【19†source】.\n",
+      "Retrieving existing thread for Alex with user_id 123\n",
+      "Generated message: The complete list of company benefits provided by Contoso includes:\n",
+      "\n",
+      "1. **Health Insurance**: Contoso covers 100% of the premiums for medical, dental, and vision plans for employees and their dependents. The company also offers flexible spending accounts, health savings accounts, and wellness programs.\n",
+      "2. **Retirement Savings**: The company matches 50% of the employees' contributions to their 401(k) plans, up to 6% of their salary. Additionally, financial education and planning services are available to help employees achieve their retirement goals.\n",
+      "3. **Paid Time Off**: Employees are offered generous paid time off policies, including vacation, sick leave, holidays, parental leave, and sabbatical leave. Employees are encouraged to take time off to recharge and spend quality time with their families and friends.\n",
+      "4. **Professional Development**: Contoso invests in employees' growth and development by providing opportunities to learn new skills, advance careers, and pursue passions. Benefits include tuition reimbursement, online courses, mentoring programs, and internal mobility.\n",
+      "5. **Work-Life Balance**: To respect employees' work-life balance, the company supports them with flexible work arrangements, remote work options, and employee assistance programs. The company culture fosters recognition and appreciation, celebrating employees' achievements and contributions.\n",
+      "To Alex: The complete list of company benefits provided by Contoso includes:\n",
+      "\n",
+      "1. **Health Insurance**: Contoso covers 100% of the premiums for medical, dental, and vision plans for employees and their dependents. The company also offers flexible spending accounts, health savings accounts, and wellness programs.\n",
+      "2. **Retirement Savings**: The company matches 50% of the employees' contributions to their 401(k) plans, up to 6% of their salary. Additionally, financial education and planning services are available to help employees achieve their retirement goals.\n",
+      "3. **Paid Time Off**: Employees are offered generous paid time off policies, including vacation, sick leave, holidays, parental leave, and sabbatical leave. Employees are encouraged to take time off to recharge and spend quality time with their families and friends.\n",
+      "4. **Professional Development**: Contoso invests in employees' growth and development by providing opportunities to learn new skills, advance careers, and pursue passions. Benefits include tuition reimbursement, online courses, mentoring programs, and internal mobility.\n",
+      "5. **Work-Life Balance**: To respect employees' work-life balance, the company supports them with flexible work arrangements, remote work options, and employee assistance programs. The company culture fosters recognition and appreciation, celebrating employees' achievements and contributions.\n",
+      "Retrieving existing thread for Alex with user_id 123\n",
+      "Generated message: The company matches 50% of the employees' contributions to their 401(k) plans, up to 6% of their salary【13†source】.\n",
+      "To Alex: The company matches 50% of the employees' contributions to their 401(k) plans, up to 6% of their salary【13†source】.\n",
+      "Deleting:  2  assistants.\n",
+      "AssistantDeleted(id='asst_cuf8bh1GGmJ18AS0OyURnmGf', deleted=True, object='assistant.deleted')\n",
+      "AssistantDeleted(id='asst_ueQ8Dm9CKiMz50BMQNBR875g', deleted=True, object='assistant.deleted')\n",
+      "Deleting:  1  threads.\n",
+      "ThreadDeleted(id='thread_DwXVkwWcHCMI6tXA0YuHVERL', deleted=True, object='thread.deleted')\n",
+      "Deleting:  6  files.\n",
+      "FileDeleted(id='assistant-Xaa5Yp0O8qJaQoX4sNcpEeUp', deleted=True, object='file')\n",
+      "FileDeleted(id='assistant-YQN6v5HPJHfovnzlUlisbJKY', deleted=True, object='file')\n",
+      "FileDeleted(id='assistant-nOmvtgFeIRddfuZodOMazSAY', deleted=True, object='file')\n",
+      "FileDeleted(id='assistant-qgRqLR622U1TP2WZsRFvDPxg', deleted=True, object='file')\n",
+      "FileDeleted(id='assistant-oXCxCoXEbn0ja8FjLnXaD9R1', deleted=True, object='file')\n",
+      "FileDeleted(id='assistant-n5HmS8oknuGEDtb1q2b3JK2B', deleted=True, object='file')\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    helper.generate_response(client,hr_assistant,\"Can you list some company benefits? Can you provide a summary for requesting medical leave?\", \"123\", \"Alex\", function_calling_delegate)\n",
