--- a/notebooks/assistant-11-Travelbot.ipynb
+++ b/notebooks/assistant-11-Travelbot.ipynb
@@ -17,8 +17,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datetime import datetime\n",
-    "from dateutil import parser\n",
     "import oaihelper as helper\n",
     "\n",
     "## Get an OpenAI client\n",
@@ -54,30 +52,6 @@
     "file_bills = helper.upload_file(client,\"../data/travel/airbnb_bills.csv\")\n",
     "#file_trains = helper.upload_file(client,\"../data/train_ids.csv\")\n",
     "#file_stations = helper.upload_file(client,\"../data/stations.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def mock_bloc_calendar(subject,content,start,end,is_all_day=False):\n",
-    "    start = parser.parse(start)\n",
-    "    end = parser.parse(end)\n",
-    "    now = datetime.now()\n",
-    "    if start>=now and end>=now:\n",
-    "        print(f\"Subject: {subject} \\nContent: {content} \\nStart: {start.strftime('%x %X')} \\nEnd: {end.strftime('%x %X')} \\nAll day: {is_all_day}\")\n",
-    "        helper.send_event({\"type\":\"event\",\n",
-    "                           \"event\":{\n",
-    "                               \"eventSubject\": \"AI Travel Assistant: \" +subject,\n",
-    "                                \"eventContent\": content,\n",
-    "                                \"startTime\": start.strftime('%x %X'),\n",
-    "                                \"endTime\": end.strftime('%x %X'),\n",
-    "                                \"isAllDay\": False\n",
-    "                           }})\n",
-    "    else:\n",
-    "        print(\"Validation failed\")"
    ]
   },
   {
@@ -193,7 +167,7 @@
     "            start = arguments['startTime']\n",
     "            end = arguments['endTime']\n",
     "            is_all_day = arguments['isAllDay']\n",
-    "            mock_bloc_calendar(subject,content,start,end,is_all_day)\n",
+    "            helper.send_event(subject,content,start,end,is_all_day)\n",
     "            tool_outputs.append({\n",
     "                \"tool_call_id\": action['id'],\n",
     "                \"output\": \"Calendar blocked\"\n",
@@ -315,7 +289,7 @@
     "    helper.generate_response(client,travel_bot_assistant,\"Will be 4 friends staying at this Airbnb in Berlin. What's my share of costs+my flight?\", \"123\", \"Alex\",function_calling_delegate)\n",
     "    helper.generate_response(client,travel_bot_assistant,\"Block my calendar tomorrow from 5-5:30pm\", \"123\", \"Alex\",function_calling_delegate)\n",
     "finally:\n",
-    "    helper.cleanup(client)\n"
+    "    helper.cleanup(client)"
    ]
   }
  ],
