--- a/notebooks/assistant-01-code_interpreter.ipynb
+++ b/notebooks/assistant-01-code_interpreter.ipynb
@@ -24,12 +24,12 @@
    "outputs": [],
    "source": [
     "import time\n",
-    "import oaihelper as framework\n",
+    "import oaihelper as helper\n",
     "\n",
     "## Get an OpenAI client\n",
-    "client = framework.get_openai_client(api_key=framework.api_KEY,\n",
-    "        api_version=framework.api_version,\n",
-    "        azure_endpoint=framework.api_URI,)"
+    "client = helper.get_openai_client(api_key=helper.api_KEY,\n",
+    "        api_version=helper.api_version,\n",
+    "        azure_endpoint=helper.api_URI,)"
    ]
   },
   {
@@ -49,9 +49,9 @@
     "    name=\"Math Tutor\",\n",
     "    instructions=\"You are a personal math tutor. Write and run code to answer math questions.\",\n",
     "    tools=[{\"type\": \"code_interpreter\"}],\n",
-    "    model=framework.gpt_deployment_name\n",
+    "    model=helper.gpt_deployment_name\n",
     ")\n",
-    "assistant_id = assistant.id"
+    "assistant"
    ]
   },
   {
@@ -144,7 +144,7 @@
     "  assistant_id=assistant.id,\n",
     "  instructions=\"Please address the user as Jane Doe. The user has a premium account.\"\n",
     ")\n",
-    "run.status"
+    "run"
    ]
   },
   {
