Updated the assistant.

--- a/notebooks/assistant-01-code_interpreter.ipynb
+++ b/notebooks/assistant-01-code_interpreter.ipynb
@@ -43,7 +43,18 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Assistant(id='asst_nZP1Me7pypD9Q1t5orLMTDqb', created_at=1705510118, description=None, file_ids=[], instructions='You are a personal math tutor. Write and run code to answer math questions.', metadata={}, model='gpt4-1106-fta-assistants', name='Math Tutor', object='assistant', tools=[ToolCodeInterpreter(type='code_interpreter')])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "assistant = client.beta.assistants.create(\n",
     "    name=\"Math Tutor\",\n",
@@ -69,7 +80,7 @@
     {
      "data": {
       "text/plain": [
-       "Thread(id='thread_v3PPhTLrICXiKqbkmrhHWCLb', created_at=1705420489, metadata={}, object='thread')"
+       "Thread(id='thread_P3rT3ZlKo5cqbwlaXWtkICx0', created_at=1705510121, metadata={}, object='thread')"
       ]
      },
      "execution_count": 3,
@@ -97,7 +108,7 @@
     {
      "data": {
       "text/plain": [
-       "ThreadMessage(id='msg_ZYtGoq8RQqtr8oNW2mwksKp2', assistant_id=None, content=[MessageContentText(text=Text(annotations=[], value='What is the 1001st prime number. Can you help me?'), type='text')], created_at=1705420490, file_ids=[], metadata={}, object='thread.message', role='user', run_id=None, thread_id='thread_v3PPhTLrICXiKqbkmrhHWCLb')"
+       "ThreadMessage(id='msg_XkhhqMGwcm2pSrnN4vn1Akn8', assistant_id=None, content=[MessageContentText(text=Text(annotations=[], value='I need to solve the equation `3x + 11 = 14`. Can you help me?'), type='text')], created_at=1705510130, file_ids=[], metadata={}, object='thread.message', role='user', run_id=None, thread_id='thread_P3rT3ZlKo5cqbwlaXWtkICx0')"
       ]
      },
      "execution_count": 4,
@@ -109,8 +120,7 @@
     "message = client.beta.threads.messages.create(\n",
     "    thread_id=thread.id,\n",
     "    role=\"user\",\n",
-    "    #content=\"I need to solve the equation `3x + 11 = 14`. Can you help me?\"\n",
-    "    content=\"What is the 1001st prime number. Can you help me?\"\n",
+    "    content=\"I need to solve the equation `3x + 11 = 14`. Can you help me?\"    \n",
     ")\n",
     "message"
    ]
@@ -130,7 +140,7 @@
     {
      "data": {
       "text/plain": [
-       "'queued'"
+       "Run(id='run_nOpMdUzzQZDYvxll4OPAm3aJ', assistant_id='asst_nZP1Me7pypD9Q1t5orLMTDqb', cancelled_at=None, completed_at=None, created_at=1705510134, expires_at=1705510734, failed_at=None, file_ids=[], instructions='Please address the user as Jane Doe. The user has a premium account.', last_error=None, metadata={}, model='gpt4-1106-fta-assistants', object='thread.run', required_action=None, started_at=None, status='queued', thread_id='thread_P3rT3ZlKo5cqbwlaXWtkICx0', tools=[ToolAssistantToolsCode(type='code_interpreter')])"
       ]
      },
      "execution_count": 5,
@@ -158,52 +168,35 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "while True:\n",
-    "  run = client.beta.threads.runs.retrieve(\n",
-    "    thread_id=thread.id,\n",
-    "    run_id=run.id\n",
-    "  )\n",
-    "  if run.status == \"completed\":\n",
-    "    break\n",
-    "  # TODO: Is it best practice to wait till completed?\n",
-    "  time.sleep(2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Get the messages for the thread and print them"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "assistant The 1001st prime number is 7927. If you need any more assistance with prime numbers or any other inquiries, feel free to ask!\n",
-      "assistant It looks like the upper bound estimate was too low. I'll adjust the estimate and try again to find the 1001st prime number. Let's recalculate this.\n",
-      "user What is the 1001st prime number. Can you help me?\n"
+      "checking assistant status. \n",
+      "messages: \n",
+      "{'role': 'assistant', 'message': 'Of course, Jane Doe! To solve the equation `3x + 11 = 14`, we need to find the value of x that makes this equation true.\\n\\nThe steps to solve this equation are as follows:\\n\\n1. Subtract 11 from both sides of the equation to isolate the term with x on one side:\\n\\\\[ 3x + 11 - 11 = 14 - 11 \\\\]\\n\\n2. Simplify both sides:\\n\\\\[ 3x = 3 \\\\]\\n\\n3. Divide both sides by 3 to solve for x:\\n\\\\[ \\\\frac{3x}{3} = \\\\frac{3}{3} \\\\]\\n\\n4. The solution is:\\n\\\\[ x = 1 \\\\]\\n\\nSo, the value of x that satisfies the equation is 1. Would you like me to perform this calculation explicitly using Python?'}\n",
+      "{'role': 'user', 'message': 'I need to solve the equation `3x + 11 = 14`. Can you help me?'}\n"
      ]
     }
    ],
    "source": [
-    "messages = client.beta.threads.messages.list(\n",
-    "  thread_id=thread.id\n",
-    ")\n",
-    "for msg in messages:\n",
-    "  #print(msg)\n",
-    "  content = msg.content\n",
-    "  for line in content:\n",
-    "    txt = line.text\n",
-    "    # TODO: Is there a better way to do this? Should it be sorted by date?\n",
-    "    print(msg.role,txt.value)"
+    "print(\"checking assistant status. \")\n",
+    "while True:\n",
+    "    run = client.beta.threads.runs.retrieve(thread_id=thread.id, run_id=run.id)\n",
+    "\n",
+    "    if run.status == \"completed\":\n",
+    "        messages = client.beta.threads.messages.list(thread_id=thread.id)\n",
+    "\n",
+    "        print(\"messages: \")\n",
+    "        for message in messages:\n",
+    "            assert message.content[0].type == \"text\"\n",
+    "            print({\"role\": message.role, \"message\": message.content[0].text.value})\n",
+    "\n",
+    "        break\n",
+    "    else:\n",
+    "        print(\"in progress...\")\n",
+    "        time.sleep(5)"
    ]
   },
   {
@@ -215,15 +208,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Assistant(id='asst_reOUmTgV7R8YcBhAwYJGurNj', created_at=1705420489, description=None, file_ids=[], instructions='You are a personal math tutor. Write and run code to answer math questions.', metadata={}, model='gpt4-1106-fta-assistants', name='Math Tutor', object='assistant', tools=[ToolCodeInterpreter(type='code_interpreter')])\n",
-      "Assistant(id='asst_4uL6U8lq2BP2xg7fuzl89M6h', created_at=1705357361, description=None, file_ids=[], instructions='You are a personal math tutor. Write and run code to answer math questions.', metadata={}, model='gpt-4-turbo-test', name='Math Tutor', object='assistant', tools=[ToolCodeInterpreter(type='code_interpreter')])\n"
+      "Assistant(id='asst_nZP1Me7pypD9Q1t5orLMTDqb', created_at=1705510118, description=None, file_ids=[], instructions='You are a personal math tutor. Write and run code to answer math questions.', metadata={}, model='gpt4-1106-fta-assistants', name='Math Tutor', object='assistant', tools=[ToolCodeInterpreter(type='code_interpreter')])\n",
+      "Assistant(id='asst_TmNrLwSemy0F3kuf0NxPrnUz', created_at=1705433552, description=None, file_ids=[], instructions='You are a personal securities trading assistant. Please be polite, professional, helpful, and friendly.', metadata={}, model='gpt4-1106-fta-assistants', name='fta-Securities Trading Assistant', object='assistant', tools=[ToolFunction(function=FunctionDefinition(name='get_stock_price', description='Retrieve the latest closing price of a stock using its ticker symbol.', parameters={'type': 'object', 'properties': {'symbol': {'type': 'string', 'description': 'The ticker symbol of the stock'}}, 'required': ['symbol']}), type='function'), ToolFunction(function=FunctionDefinition(name='send_email', description='Sends an email to a recipient(s).', parameters={'type': 'object', 'properties': {'to': {'type': 'string', 'description': 'The email(s) the email should be sent to.'}, 'content': {'type': 'string', 'description': 'The content of the email.'}}, 'required': ['to', 'content']}), type='function')])\n"
      ]
     }
    ],
@@ -250,26 +243,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n",
-      "True\n"
+      "AssistantDeleted(id='asst_TmNrLwSemy0F3kuf0NxPrnUz', deleted=True, object='assistant.deleted')\n",
+      "ThreadDeleted(id='thread_P3rT3ZlKo5cqbwlaXWtkICx0', deleted=True, object='thread.deleted')\n"
      ]
     }
    ],
    "source": [
     "# TODO: Should the assistant live for the life of the application?\n",
-    "assistant_status = client.beta.assistants.delete(assistant.id)\n",
-    "print(assistant_status.deleted)\n",
+    "print(client.beta.assistants.delete(assistant.id))\n",
     "\n",
     "# TODO: Should the thread live for the life of the execution?\n",
-    "thread_status = client.beta.threads.delete(thread.id)\n",
-    "print(thread_status.deleted)"
+    "print(client.beta.threads.delete(thread.id))"
    ]
   }
  ],
